--- a/Vade/Base.lproj/Main.storyboard
+++ b/Vade/Base.lproj/Main.storyboard
@@ -273,33 +273,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FvY-Cl-5on">
-                                <rect key="frame" x="45" y="298" width="325" height="193"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="UBc-uJ-cVn">
+                                <rect key="frame" x="40" y="363" width="334" height="170"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="1DF-1M-DdO"/>
+                                </constraints>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V5h-3X-3dk">
-                                <rect key="frame" x="176" y="666" width="62" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Continue">
-                                    <color key="titleColor" systemColor="systemBlueColor"/>
-                                </state>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GHN-3P-URZ">
+                                <rect key="frame" x="176" y="663" width="62" height="30"/>
+                                <state key="normal" title="Continue"/>
                                 <connections>
-                                    <action selector="continueTapped:" destination="mH5-UY-Bof" eventType="touchUpInside" id="hgl-ZE-7Kd"/>
+                                    <action selector="continueTapped:" destination="mH5-UY-Bof" eventType="touchUpInside" id="uMZ-uD-SE5"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ogq-NA-poF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ogq-NA-poF" firstAttribute="trailing" secondItem="UBc-uJ-cVn" secondAttribute="trailing" constant="40" id="6KB-Jl-IYw"/>
+                            <constraint firstItem="UBc-uJ-cVn" firstAttribute="centerY" secondItem="um9-ab-5Cp" secondAttribute="centerY" id="Scg-Wb-nDc"/>
+                            <constraint firstItem="GHN-3P-URZ" firstAttribute="top" secondItem="UBc-uJ-cVn" secondAttribute="bottom" constant="130" id="bFP-hK-Hfp"/>
+                            <constraint firstItem="GHN-3P-URZ" firstAttribute="centerX" secondItem="um9-ab-5Cp" secondAttribute="centerX" id="bc4-vV-Abh"/>
+                            <constraint firstItem="UBc-uJ-cVn" firstAttribute="leading" secondItem="Ogq-NA-poF" secondAttribute="leading" constant="40" id="vnL-Rs-aIX"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="continueButton" destination="V5h-3X-3dk" id="v4W-GN-TX9"/>
-                        <outlet property="tableView" destination="FvY-Cl-5on" id="1Kz-Iw-M0A"/>
+                        <outlet property="tableView" destination="UBc-uJ-cVn" id="xdN-5U-xe1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ih9-lE-k2s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3484" y="117"/>
+            <point key="canvasLocation" x="3482.608695652174" y="116.51785714285714"/>
         </scene>
         <!--Train-->
         <scene sceneID="GUh-h8-6aR">
@@ -325,19 +330,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2sI-jr-Z8w">
-                                <rect key="frame" x="10" y="153" width="394" height="163"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hH1-84-ZTZ">
-                                <rect key="frame" x="10" y="445" width="394" height="185"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="129" translatesAutoresizingMaskIntoConstraints="NO" id="I89-b1-8LJ">
+                                <rect key="frame" x="5" y="209.5" width="404" height="477"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2sI-jr-Z8w">
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="163"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="163" id="6HR-t4-A7a"/>
+                                        </constraints>
+                                    </tableView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hH1-84-ZTZ">
+                                        <rect key="frame" x="0.0" y="292" width="404" height="185"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="185" id="gTC-eB-ewz"/>
+                                        </constraints>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3sC-Yl-rkE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="I89-b1-8LJ" firstAttribute="centerY" secondItem="6V4-wV-lip" secondAttribute="centerY" id="3mh-eW-yE3"/>
+                            <constraint firstItem="I89-b1-8LJ" firstAttribute="leading" secondItem="3sC-Yl-rkE" secondAttribute="leading" constant="5" id="Q1N-wh-Ewf"/>
+                            <constraint firstItem="I89-b1-8LJ" firstAttribute="centerX" secondItem="6V4-wV-lip" secondAttribute="centerX" id="pkZ-1f-8CT"/>
+                            <constraint firstItem="3sC-Yl-rkE" firstAttribute="trailing" secondItem="I89-b1-8LJ" secondAttribute="trailing" constant="5" id="rsn-sw-71S"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" id="WG2-V3-NKe"/>
                     <connections>
@@ -370,7 +390,7 @@
         <!--Navigation Controller-->
         <scene sceneID="if6-UP-9ZR">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="64v-gh-gfX" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="AuthNavigationVC" automaticallyAdjustsScrollViewInsets="NO" id="64v-gh-gfX" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="0bt-Sq-qMa"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TQt-bc-eaR">
@@ -423,9 +443,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
